--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
     "name": "silence",
     "version": "0.0.1",
     "description": "collect my favorite librarys and inspirations",
-    "main": "index.js",
-    "type": "module",
-    "module": "src/index.ts",
     "repository": "https://hub.fastgit.org/lhlyu/silence.git",
     "author": "lhlyu",
     "license": "MIT",
@@ -30,11 +27,15 @@
     },
     "devDependencies": {
         "@types/js-md5": "^0.4.2",
-        "@vitejs/plugin-vue": "^1.2.1",
-        "@vitejs/plugin-vue-jsx": "^1.1.3",
-        "@vue/compiler-sfc": "^3.0.11",
-        "prettier": "^2.2.1",
-        "sass": "^1.32.11",
-        "vite": "^2.2.1"
+        "@vitejs/plugin-vue": "^1",
+        "@vue/compiler-sfc": "^3",
+        "autoprefixer": "^10",
+        "postcss": "^8",
+        "postcss-loader": "^5",
+        "prettier": "^2",
+        "sass": "^1",
+        "typescript": "^4",
+        "vite": "^2",
+        "vue-tsc": "^0"
     }
 }
