--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "fmt": "prettier --write .",
         "dev": "vite",
-        "build": "vite build",
+        "build": "vite build --outDir ./docs",
         "serve": "vite preview"
     },
     "cfg": {
